--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
     <main>
         <div>
+            <img src="logo.png">
             <h1>Tutoriel Git & Github</h1>
             <h2>Apprenez les bases simplement et gratuitement !</h2>
             <a href="https://github.com/enioaiello/Tutoriel-Git" target="_blank" class="button">Commencer</a>
