--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <li>
                     <a href="https://github.com/enioaiello/Tutoriel-Git" target="_blank">Commencer</a>
                 </li>
+                <li>
+                    <a href="https://discord.gg/Uv6DHVsW" target="_blank">Support</a>
+                </li>
             </ul>
         </nav>
     </header>
