--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="https://github.com/enioaiello/Tutoriel-Git" target="_blank">Commencer</a>
                 </li>
                 <li>
-                    <a href="https://discord.gg/Uv6DHVsW" target="_blank">Support</a>
+                    <a href="https://discord.gg/Uv6DHVsW" target="_blank">Communauté</a>
                 </li>
             </ul>
         </nav>
