--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Accueil</a>
+                    <a href="index.html" class="navBarItems" title="Retourner à l'accueil">Accueil</a>
                 </li>
                 <li>
-                    <a href="https://github.com/enioaiello/Tutoriel-Git" target="_blank">Commencer</a>
+                    <a href="documentation.html" class="navBarItems" title="Accéder aux ressources">Commencer</a>
                 </li>
                 <li>
-                    <a href="https://discord.gg/Uv6DHVsW" target="_blank">Communauté</a>
+                    <a href="https://discord.gg/Uv6DHVsW" target="_blank" class="navBarItems" title="Rejoindre la communauté Discord">Communauté</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <div>
+        <div id="mainHome">
             <img src="logo.png">
             <h1>Tutoriel Git & Github</h1>
             <h2>Apprenez les bases simplement et gratuitement !</h2>
-            <a href="https://github.com/enioaiello/Tutoriel-Git" target="_blank" class="button">Commencer</a>
+            <a href="documentation.html" class="button" title="Accéder aux ressources">Commencer</a>
         </div>
     </main>
     <footer>
