Mise à jour du site

--- a/documentation.html
+++ b/documentation.html
@@ -9,17 +9,17 @@
     <link rel="icon" href="favicon.png">
 </head>
 <body>
-<header>
+<header id="otherHeader">
     <nav>
-        <ul>
-            <li>
+        <ul id="navBarUl">
+            <li class="navBarLi">
                 <a href="index.html" class="navBarItems" title="Retourner à l'accueil">Accueil</a>
             </li>
-            <li>
+            <li class="navBarLi">
                 <a href="documentation.html" class="navBarItems" title="Accéder aux ressources">Commencer</a>
             </li>
-            <li>
-                <a href="https://discord.gg/Uv6DHVsW" target="_blank" class="navBarItems" title="Rejoindre la communauté Discord">Communauté</a>
+            <li class="navBarLi">
+                <a href="community.html" class="navBarItems" title="Consulter la communauté">Communauté</a>
             </li>
         </ul>
     </nav>
@@ -53,7 +53,8 @@
             - Effectuez enfin la commande <span>git push origin main</span> pour poster vos changements</p>
         <hr>
         <h2>Vous avez fini !</h2>
-        <p>Félicitations ! Vous venez de prendre en main Git et Github ! Si vous avez besoins d'aides, passez par notre <a href="https://discord.gg/Uv6DHVsW" target="_blank">Discord</a> !</p>
+        <p>Félicitations ! Vous venez de prendre en main Git et Github !</p>
+        <p>De plus, du contenu devrait arriver prochainement !</p>
     </div>
 </main>
 <footer>
