--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.png">
 </head>
-<body>
+<body id="homeBody">
     <header>
         <nav>
-            <ul>
-                <li>
+            <ul id="navBarUl">
+                <li class="navBarLi">
                     <a href="index.html" class="navBarItems" title="Retourner à l'accueil">Accueil</a>
                 </li>
-                <li>
+                <li class="navBarLi">
                     <a href="documentation.html" class="navBarItems" title="Accéder aux ressources">Commencer</a>
                 </li>
-                <li>
-                    <a href="https://discord.gg/Uv6DHVsW" target="_blank" class="navBarItems" title="Rejoindre la communauté Discord">Communauté</a>
+                <li class="navBarLi">
+                    <a href="community.html" class="navBarItems" title="Consulter la communauté">Communauté</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <div id="mainHome">
-            <img src="logo.png">
+            <img src="logo-white.png">
             <h1>Tutoriel Git & Github</h1>
             <h2>Apprenez les bases simplement et gratuitement !</h2>
             <a href="documentation.html" class="button" title="Accéder aux ressources">Commencer</a>
