--- a/community.html
+++ b/community.html
@@ -41,7 +41,8 @@
                 Promouvez vos projets Github et échangez à propos d'idées.
             </li>
         </ul>
-        <p>Pour le moment, le Discord est en recréation totale, il n'y a donc aucuns liens disponibles. En attendant vous pouvez contacter le <a href="mailto:aielloenio@icloud.com">fondateur du projet</a> pour en savoir plus sur son avancement.</p>
+        <a href="https://discord.gg/KegrkVCpDp" class="button centerButton" title="Rejoindre le Discord">Rejoindre</a>
+        <p>La communauté est disponible <strong>uniquement sur Discord</strong> !</p>
     </div>
 </main>
 <footer>
