Mise à jour du site

--- a/documentation.html
+++ b/documentation.html
@@ -28,6 +28,7 @@
     <div id="mainDocumentation">
         <h2>Commencer</h2>
         <p>Bienvenue dans ce tutoriel où nous allons apprendre le <strong>Git</strong> ainsi que le <strong>Github</strong> !</p>
+        <p><strong>Le tutoriel n'est pas la méthode optimale pour utiliser Git, une mise à jour sera à venir !</strong></p>
         <hr>
         <h3>Préparatifs</h3>
         <p>Pour ce tutoriel, vous aurez besoins de <a href="https://git-scm.com/" target="_blank">Git</a> (nous utiliserons la version Bash pour que ce dernier fonctionne sur Windows, macOS et LInux de la même manière). Prenez la version adaptée à votre système d'exploitation. Par exemple si vous avez un PC sous Windows 11, prenez la version <span>Windows</span> !
